syntax = "proto3";

package scanner.net.api.common;

message DeviceInfo {
  string device_name = 1;
  uint32 channel_number = 2;
}