syntax = "proto3";

package scanner.net.api.common;

message LinuxTimeWithMs {
  uint64 sec = 1;
  uint32 ms = 2;
}